Style was added

--- a/index.css
+++ b/index.css
@@ -1,12 +1,30 @@
 body {
     text-align: center;
     vertical-align: middle;
+    background-color: #FC9E4F;
+}
+
+h1 {
+  color: #0F0C4C;
+  font-size: 3rem;
 }
 
 img {
   width: 100%;
   height: 100%;
   object-fit: fill;
+}
+
+button {
+  background-color: #f44336; /* Green */
+  border: none;
+  border-radius: 10px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
 
 .card-container { /* blue container */
@@ -35,6 +53,32 @@ img {
     .card-container { /* blue container */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    border: 3px solid purple;
+    /* border: 3px solid purple; */
+  }
+
+  .card {
+    border-radius: 10px;
+    width: 90px;
+    height: 120px;
+    margin: 10px;
+  }
+
+  h1 {
+    margin: 30px auto;
+    color: #0F0C4C;
+    font-size: 2.5rem;
+  }
+
+  button {
+    margin-top: 50px;
+    background-color: #f44336; /* Green */
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
 }
