--- a/index.css
+++ b/index.css
@@ -1,11 +1,16 @@
 body {
     text-align: center;
     vertical-align: middle;
-    background-color: #FC9E4F;
+    /* background-color: #FC9E4F; */
+    background: radial-gradient(#126f1f, #135128);
+    /* background: radial-gradient(#82CD47, #379237); */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 h1 {
   color: #0F0C4C;
+  text-shadow: 0 0 6px #dccbc9;
   font-size: 3rem;
 }
 
@@ -16,6 +21,7 @@ img {
 }
 
 button {
+  margin-top: 30px;
   background-color: #f44336; /* Green */
   border: none;
   border-radius: 10px;
@@ -66,6 +72,7 @@ button {
   h1 {
     margin: 25px auto;
     color: #0F0C4C;
+    text-shadow: 0 0 6px #dccbc9;
     font-size: 2.5rem;
   }
 
